--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
     </div>
     <footer>
-        Feito por Milene Fernandes ♡
+        by Milene Fernandes ♡
       </footer>
     <script 
       type="module" 
